# clockodo-mcp

./: README.md  pyproject.toml  spec_to_model.py
clockodo_mcp/: __main__.py  clockodo_mcp.py  create_update.py  delete.py  get.py  get_id.py  models.py  payload_models.py  spec_models.py  undocumented_models.py  utils.py
